Added requirements.txt auto-install

--- a/www/_config.yml
+++ b/www/_config.yml
@@ -1,14 +1,14 @@
-title: Cool project 2024
+title: LiFETIME
 
 author:
-  name: Student name 1, Student name 2, etc.
+  name: Amy Gibbon, Joseph Garvey
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  Write an awesome description for your new site here. You can edit this line
-  in _config.yml. It will appear in your document head meta (for Google search
-  results) and in your feed.xml site description.
+  The LiFETIME project aims to create viable 2nd lives for Li-ion batteries.
+  All work here is the result of a collaboration between Cambridge University Engineering Department students
+  and LiFETIME, as part of the IIA Engineering module "Technology for the Poorest Billion."
 
 # Build settings
 
@@ -44,12 +44,12 @@ minima:
   # solarized-light	   Light variant of solarized color scheme.
   # solarized-dark	   Dark variant of solarized color scheme.
   # solarized	         Adaptive skin for solarized color scheme skins.
-  skin: classic
+  skin: solarized-dark
   
   # Minima date format.
   # The default value is "%b %d, %Y" (e.g. Nov 14, 2023) 
   # Refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this.
-  #date_format: "%b-%d-%Y"
+  date_format: "%d-%b-%Y"
 
   # Generate social links in footer.
   #social_links:
